<resources>
    <string name="app_name">MondaySally</string>

    <string name="ok">확인</string>
    <string name="more">더보기</string>
    <string name="post">등록</string>
    <string name="delete">삭제</string>
    <string name="modify">수정</string>
    <string name="done">완료</string>

    <!--숫자포맷-->
    <string name="price_format">%,2d</string>

    <!--메뉴-->
    <string name="menu_home">홈</string>
    <string name="menu_shop">기프트샵</string>
    <string name="menu_twinkle">트윙클</string>
    <string name="go_home">홈으로</string>
    <string name="gift_history">기프트 히스토리</string>
    <string name="twinkle_ranking">트윙클 랭킹</string>
    <string name="clover_history">클로버 히스토리</string>
    <string name="mypage">마이페이지</string>
    <string name="profile_edit">프로필수정</string>
    <string name="qr_camera">출퇴근 인증</string>
    <string name="twinkle_post">내 트윙클 추가하기</string>
    <string name="twinkle_edit">내 트윙클 수정하기</string>

    <!--에러처리-->
    <string name="default_fail">네트워크연결이 원활하지 않습니다</string>

    <!--OnBoarding-->
    <string name="onboarding_welcome_title">먼데이샐리에\n오신걸 환영합니다!</string>
    <string name="onboarding_welcome_content">월요병 NO! 출근이 즐거워\n직장인들의 만병인 월요병 이제는 극복해보세요.</string>
    <string name="onboarding_button">바로 시작하기></string>

    <!--튜토리얼-->
    <string name="tutorial_start">시작하기</string>
    <string name="tutorial_skip">건너뛰기</string>
    <string name="tutorial_title_1">출퇴근 시간에 따른 포인트</string>
    <string name="tutorial_title_2">클로버로 기프트 신청</string>
    <string name="tutorial_title_3">반짝이는 순간, 트윙클</string>
    <string name="tutorial_content_1">출퇴근을 인증하고 근무시간만큼\n클로버를 획득하세요.</string>
    <string name="tutorial_content_2">클로버로 다양하고 실용적인 기프트를\n얻어 일에 대한 동기부여을 받아보세요.</string>
    <string name="tutorial_content_3">기프트를 통해 얻은 반짝이는 순간을\n기록하고 동료들과 공유해보세요.</string>

    <!--직원코드입력-->
    <string name="team_code_title">직원 코드 입력</string>
    <string name="team_code_input">코드 입력</string>
    <string name="team_code_hint">직원 코드를 입력해주세요.</string>
    <string name="team_code_guide">* 발급된 코드를 통해 자동 등록 및 로그인이 됩니다.</string>
    <string name="team_code_btn_done">입력 완료</string>

    <!--약관동의-->
    <string name="terms_agree">약관에 동의</string>
    <string name="terms_please">해 주세요</string>
    <string name="terms_all_agree">전체 동의</string>
    <string name="terms_service_title">서비스 이용약관 동의</string>
    <string name="terms_service_content">제 1 장 총칙
제 1 조 (목적)
1. 본 약관은 먼데이샐리가 제공하는 모든 서비스(이하 "서비스")의 이용조건 및 절차, 이용자와 먼데이샐리의 권리, 의무, 책임사항과 기타 필요한 사항을 규정함을 목적으로 합니다.
    >제 1 장 총칙
제 1 조 (목적)
1. 본 약관은 먼데이샐리가 제공하는 모든 서비스(이하 "서비스")의 이용조건 및 절차, 이용자와 먼데이샐리의 권리, 의무, 책임사항과 기타 필요한 사항을 규정함을 목적으로 합니다.
    >제 1 장 총칙
제 1 조 (목적)
1. 본 약관은 먼데이샐리가 제공하는 모든 서비스(이하 "서비스")의 이용조건 및 절차, 이용자와 먼데이샐리의 권리, 의무, 책임사항과 기타 필요한 사항을 규정함을 목적으로 합니다.
    >제 1 장 총칙
제 1 조 (목적)
1. 본 약관은 먼데이샐리가 제공하는 모든 서비스(이하 "서비스")의 이용조건 및 절차, 이용자와 먼데이샐리의 권리, 의무, 책임사항과 기타 필요한 사항을 규정함을 목적으로 합니다.</string>
    <string name="terms_privacy_title">개인정보 수집 및 이용 동의</string>

    <!--가입환영-->
    <string name="welcome_go_home">홈으로 가기</string>
    <string name="welcome_title">귀하의 입사를 축하드립니다!</string>
    <string name="welcome_content">먼데이샐리를 통해 보다 더\n즐거운 회사생활을 경험해보세요.</string>

    <!--홈-->
    <string name="home_total_work_time_is">누적 근무 시간은</string>
    <string name="home_total_clover">누적 클로버</string>
    <string name="home_now_clover">현재 클로버</string>
    <string name="home_use_clover">사용 클로버</string>
    <string name="home_gift_history">기프트 히스토리</string>
    <string name="home_twinkle_ranking">트윙클 랭킹</string>
    <string name="home_now_on_member">현재 출근 멤버</string>
    <string name="home_now_on_member_working">근무중</string>
    <string name="home_gold">1등</string>
    <string name="home_silver">2등</string>
    <string name="home_bronze">3등</string>
    <string name="home_no_history">아직 사용하신 히스토리가 없어요</string>
    <string name="home_no_member">현재 근무중인 멤버가 없어요</string>

    <!--기프트히스토리-->
    <string name="gift_history_confirm">승인\n완료</string>
    <string name="gift_history_hold">승인\n대기</string>
    <string name="gift_history_rejected">승인\n거부</string>
    <string name="gift_history_guide">기프트 신청내역</string>
    <string name="gift_history_twinkle_confirm">트윙클 완료</string>
    <string name="gift_history_twinkle_hold">트윙클 대기</string>
    <string name="gift_history_twinkle_rejected">트윙클 거부</string>

    <!--기프트샵-->
    <string name="shop_all_gift">전체 기프트</string>
    <string name="shop_option_select">옵션 선택</string>
    <string name="shop_apply">신청하기</string>
    <string name="shop_item_comment">*아이템은 1일 1회 한도로 구매 가능합니다.</string>
    <string name="shop_gift_done">기프트 신청이 완료되었습니다.</string>
    <string name="shop_gift_done_comment">기프트 신청 처리는\n평균 2-3일 정도가 소요됩니다.</string>
    <string name="shop_go_twinkle">트윙클 쓰러가기</string>
    <string name="shop_apply_check">신청하시겠습니까?</string>
    <string name="shop_no_data">등록된 기프트가 없어요</string>
    <string name="gift_history_no_data">신청한 기프트가 없어요</string>

    <!--트윙클-->
    <string name="twinkle_my_twinkle">내 트윙클 현황</string>
    <string name="twinkle_comment_hint">댓글을 입력해주세요. </string>
    <string name="twinkle_post_btn">게시</string>
    <string name="twinkle_gift_name">기프트 명</string>
    <string name="twinkle_clover_photo">클로버 사용 증명사진</string>
    <string name="twinkle_photo_guide">* 첫번째 사진이 대표사진으로 등록됩니다.</string>
    <string name="twinkle_receipt">영수증 증명사진</string>
    <string name="twinkle_receipt_guide">* 영수증 내역이 잘 보이게 첨부해주세요.</string>
    <string name="twinkle_content">트윙클 내용</string>
    <string name="twinkle_cotent_hint">트윙클 내용을 입력해주세요.</string>
    <string name="twinkle_validate_twinkle_photo">클로버 사용 증명사진을\n등록해 주세요.</string>
    <string name="twinkle_validate_receipt_photo">영수증 증명사진을\n등록해 주세요.</string>
    <string name="twinkle_validate_twinkle_content">트윙클 내용을 입력해주세요.</string>

    <string name="twinkle_ranking_now">현재</string>
    <string name="twinkle_ranking_guide">*랭킹은 현재 클로버를 기준으로 선정됩니다.</string>
    <string name="can_buy_gift">현재클로버로 구매 가능한 기프트</string>
    <string name="clover_history_accum_guide">님의 누적 클로버</string>
    <string name="clover_history_now_guide">님의 현재 클로버</string>
    <string name="clover_history_used_guide">님의 사용 클로버</string>

    <!--마이메뉴-->
    <string name="mypage_my_clover">내 클로버</string>
    <string name="mypage_gift_history">기프트 내역</string>
    <string name="mypage_inquiry">1:1 문의</string>
    <string name="mypage_on_boarding">온보딩</string>
    <string name="mypage_open_source">오픈 소스</string>
    <string name="mypage_terms">이용약관</string>
    <string name="mypage_version">버전 정보</string>
    <string name="mypage_resignation">퇴사 신청</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_profile_edit">프로필 수정</string>

    <!--프로필수정-->
    <string name="mypage_nickname">닉네임</string>
    <string name="mypage_nickname_hint">닉네임을 입력해주세요.</string>
    <string name="mypage_phone">연락처</string>
    <string name="mypage_phone_hint">연락처를 입력해주세요.</string>
    <string name="mypage_bank">은행 및 계좌번호</string>
    <string name="mypage_bank_hint">(은행) 계좌번호를 입력해주세요.</string>
    <string name="mypage_email">이메일</string>
    <string name="mypage_email_hint">이메일을 입력해주세요.</string>
    <string name="profile_edit_check">프로필을 수정하시겠습니까?</string>

    <!--QR-->
    <string name="qr_guide_1">현재 퇴근 상태로\n하단에 QR 코드를 인식시키면</string>
    <string name="qr_status_on">출근</string>
    <string name="qr_status_off">퇴근</string>
    <string name="qr_guide_2">이 됩니다.</string>
    <string name="qr_guide_3">* QR코드를 인식시켜주세요.</string>
    <string name="qr_on_message">출근처리 되었습니다</string>
    <string name="qr_off_message">퇴근처리 되었습니다</string>

    <string name="comment_delete_check">댓글을 삭제하시겠습니까?</string>
    <string name="comment_delete_check_guide">삭제된 댓글은 복구가 불가능합니다.</string>


</resources>