<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.moon.android.mondaysally.ui.team_code.TeamCodeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/activity_team_code_title_view"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@color/white"
            android:elevation="12dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/team_code_title"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/activity_team_code_tv_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/team_code_input"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_team_code_title_view" />

        <EditText
            android:id="@+id/activity_team_code_et_input"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_round_white_gray"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/team_code_hint"
            android:inputType="numberDecimal"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_team_code_tv_input" />

        <TextView
            android:id="@+id/activity_team_code_tv_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/team_code_guide"
            android:textColor="@color/greyish_brown"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/activity_team_code_et_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
