<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.moon.android.mondaysally.ui.main.auth.AuthViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            tools:context=".ui.main.MainActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activity_profile_edit_top_bar"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:background="@color/white"
                android:elevation="12dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/activity_profile_edit_iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:onClick="@{() -> viewModel.whenBackClicked()}"
                    android:padding="15dp"
                    android:src="@drawable/ic_chevron_0_left_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/profile_edit"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:padding="16dp"
                    android:text="@string/done"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:onClick="@{() -> viewModel.whenEditDoneClicked()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/activity_profile_edit_iv_profile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="26dp"
                android:src="@drawable/ic_photo_mid"
                bind_profile_edit_image_circle="@{viewModel.profileUrl}"
                android:onClick="@{() -> viewModel.whenIvProfileClicked()}"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_profile_edit_top_bar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/activity_profile_edit_iv_profile">

                <View
                    android:id="@+id/activity_my_page_line_2"
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@color/heavy_line_grey"
                    app:layout_constraintTop_toBottomOf="@id/activity_my_page_tv_email" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingStart="16dp"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp"
                    android:text="@string/mypage_nickname"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/bg_edittext_gray_orange"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="top"
                    android:hint="@string/twinkle_cotent_hint"
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@={viewModel.editTextNicknameString}"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingStart="16dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="14dp"
                    android:text="@string/mypage_phone"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/activity_my_page_et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/bg_edittext_gray_orange"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="top"
                    android:hint="@string/mypage_phone_hint"
                    android:maxLength="11"
                    android:inputType="phone"
                    android:paddingStart="16dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@={viewModel.editTextPhoneString}"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingStart="16dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="14dp"
                    android:text="@string/mypage_bank"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/bg_edittext_gray_orange"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="top"
                    android:hint="@string/mypage_bank_hint"
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@={viewModel.editTextBankString}"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingStart="16dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="14dp"
                    android:text="@string/mypage_email"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/bg_edittext_gray_orange"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="top"
                    android:hint="@string/mypage_email_hint"
                    android:inputType="textEmailAddress"
                    android:paddingStart="16dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@={viewModel.editTextEmailString}"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>